--- a/src/app/pages/groups/card/pages/students/group-card-students.page.html
+++ b/src/app/pages/groups/card/pages/students/group-card-students.page.html
@@ -27,7 +27,7 @@
           </div>
 
           <div class="app-group-card-students-row-actions">
-            <div class="app-button-secondary" (click)="navigationService.students().id(student.id).information().go()">
+            <div class="app-button-secondary" (click)="navigationService.students().login('').information().go()">
               Перейти
             </div>
           </div>
