--- a/src/styles/page/app-card-page.less
+++ b/src/styles/page/app-card-page.less
@@ -122,6 +122,13 @@
   color: @color-fill_text_basic;
 }
 
+.app-card-page-info {
+  .app-font-regular;
+
+  font-size: @font-normal;
+  color: @color-fill_text_basic_light;
+}
+
 .app-card-page-link {
   .app-font-regular;
 
