--- a/src/app/pages/login/login.page.less
+++ b/src/app/pages/login/login.page.less
@@ -26,5 +26,8 @@
 }
 
 .login-error-link {
+  .app-font-regular;
+
+  font-size: @font-normal;
   color: @color-fill_text_basic_action_link !important;
 }
