select current date automatically in calendar

--- a/src/app/controls/common/app-date/app-date.control.html
+++ b/src/app/controls/common/app-date/app-date.control.html
@@ -1,4 +1,4 @@
 <my-date-picker id="date" class="app-date-picker"
-  [(ngModel)]="date"
+  [(ngModel)]="model"
   [options]="{dateFormat: dateFormat}"
   (dateChanged)="onDateChange($event)"></my-date-picker>
