--- a/src/app/pages/groups/card/pages/information/views/assign-lesson-popup/group-card-information-assign-lesson-popup.view.html
+++ b/src/app/pages/groups/card/pages/information/views/assign-lesson-popup/group-card-information-assign-lesson-popup.view.html
@@ -89,7 +89,7 @@
         Отмена
       </button>
 
-      <button class="app-button-danger app-modal-footer-buttons" [disabled]="isNew()" (click)="delete()">
+      <button *ngIf="!isNew()" class="app-button-danger app-modal-footer-buttons" (click)="delete()">
         Удалить
       </button>
     </div>
