filters in lists

--- a/src/app/pages/groups/list/groups-list.page.html
+++ b/src/app/pages/groups/list/groups-list.page.html
@@ -21,7 +21,7 @@
 
     <app-select-cabinet-control
       class="app-groups-list-column-cabinets"
-      [items]="[]"
+      [items]="cabinets"
       (onChange)="onCabinetFilterChange($event)">
     </app-select-cabinet-control>
 
